<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".Display_information">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:text="@string/your_performance"
        android:textSize="25sp"
        android:textStyle="italic" />

    <TableRow android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/total_marks"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/display_toal_marks"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center" />
    </TableRow>


    <TableRow android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/percentage"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/display_Percentage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center" />
    </TableRow>

    <TableRow android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/_3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/grade"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/display_Grade"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center" />
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E6E4E4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/result"
            android:textAllCaps="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/verdict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text=""
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


    <Button
        android:id="@+id/goback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/goback" />

</TableLayout>
